--- a/styles/styles.css
+++ b/styles/styles.css
@@ -39,6 +39,7 @@ body {
     width: 376px;
     padding: 10px; }
    .message{
+    max-width: 90%;
     border: 1px solid rgba(61, 60, 60, 0.835);
     border-radius: 8px;
     font-size: larger;
@@ -46,6 +47,7 @@ body {
     box-shadow: 0 2px 10px 0 #ffffff;
    }
   button {
+    max-width: 90%;
     border: 1px solid rgba(61, 60, 60, 0.835);
     border-radius: 8px;
     font-size: larger;
